src/test/ui/empty/empty-never-array.stderr
error[E0005]: refutable pattern in local binding: `T(_, _)` not covered
  --> $DIR/empty-never-array.rs:10:9
   |
LL | / enum Helper<T, U> {
LL | |     T(T, [!; 0]),
LL | |     #[allow(dead_code)]
LL | |     U(U),
LL | | }
   | |_- `Helper<T, U>` defined here
...
LL |       let Helper::U(u) = Helper::T(t, []);
   |           ^^^^^^^^^^^^ pattern `T(_, _)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
